--- a/zenplay/website/templates/index.html
+++ b/zenplay/website/templates/index.html
@@ -225,16 +225,16 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="owl-courses-item owl-carousel">
             {% for movie in movies %}
             <div class="item">
-                <img src="{{ movie.Poster }}" alt="{{ movie.Title }}">
+                <img src="{{movie.header_image}}" alt="">
                 <div class="down-content">
-                    <h4>{{ movie.Title }}</h4>
+                    <h4>{{ movie.title }}</h4>
                     <div class="info">
                         <div class="row">
                             <div class="col-8">
                                 <ul>
                                     <!-- You can customize the details you want to display here -->
-                                    <li>Year: {{ movie.Year }}</li>
-                                    <li>Type: {{ movie.Type }}</li>
+                                    <li>Year: 2013</li>
+                                    <li>Type: action</li>
                                 </ul>
                             </div>
                         </div>
